--- a/src/main/resources/frontend/css/general.css
+++ b/src/main/resources/frontend/css/general.css
@@ -1,19 +1,51 @@
 html {
     background-repeat: no-repeat;
-    height: 100vh;
 }
 body {
     padding: 20px;
-    background: radial-gradient(#39CCCC, #000);
-    color: #FF851B;
-    font-family: 'Montserrat', sans-serif;
+    background: radial-gradient(#2AA6A6, #000000) no-repeat center center fixed;
+    background-size: cover;
+    color: #F5E320;
+    font-family: 'Cabin', Helvetica, Arial, sans-serif;
     font-size: large;
 }
 
+.home {
+    text-align: center;
+}
+
+section img {
+    position: relative;
+    width: 50px;
+    height: 50px;
+}
+
+.home img {
+    left: 30px;
+    top: -30px;
+}
+
+.watch .return {
+    display: inline-block;
+}
+
+.limon {
+    font-family: 'Lobster', Georgia, Times, serif;
+    letter-spacing: 7px;
+    text-align: center;
+    font-size: 5rem;
+    text-shadow: 2px 2px #fff;
+    margin-bottom: 0.2em;
+    padding:0 16px 0 0;
+    display: inline-block;
+    position: relative;
+    left: 35px;
+}
 .available {
     text-align: center;
-    font-size: xx-large;
-
+    font-size: x-large;
+    font-family: 'Cabin', Helvetica, Arial, sans-serif;
+    margin-bottom: 1em;
 }
 
 .movie {
@@ -43,7 +75,7 @@ body {
 }
 .genre, .plot, .actors, .director{
     color: white;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cabin', Helvetica, Arial, sans-serif;
     font-weight: 400;
     line-height: 20px;
 }
@@ -63,7 +95,20 @@ body {
 
 .imgdiv {
     opacity: 1;
+    position: relative;
 }
+.play {
+    display: block;
+}
+
+.play .button {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 
 .imgdiv:hover {
     opacity: 0.75;
@@ -73,6 +118,15 @@ body {
     transition: all 0.2s ease-in-out;
 }
 
+.imgdiv:hover .play .button {
+    opacity: 1;
+}
+
+
+// -------------
+// watch page
+// -------------
+
 #video {
     max-height: 300px;
     max-width: 640px;
@@ -80,4 +134,15 @@ body {
     position: relative;
     top: 50%;
     transform: translateY(50%);
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1rem;
+}
+
+.return:hover {
+    text-decoration: underline;
 }
